--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: ''
 subjects:
 - !lcsh 'Science fiction'
 - !lcc 'PS'
+- GITenberg
 title: A Place so Foreign
 url: http://www.gutenberg.org/ebooks/16721
